[gd_scene load_steps=11 format=2]

[ext_resource path="res://Maps/Map2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Input/fastForward.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Input/tile_0086.png" type="Texture" id=3]
[ext_resource path="res://Scenes/House.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Input/right.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Input/pause.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI2.gd" type="Script" id=7]
[ext_resource path="res://addons/beatkeeper/beatkeeper_node.gd" type="Script" id=8]
[ext_resource path="res://Sounds/Daft_Punk_Get_Lucky_feat_Pharrell_Williams_N.mp3" type="AudioStream" id=9]
[ext_resource path="res://Scenes/GameScene2.gd" type="Script" id=10]

[node name="GameScene2" type="Node"]
script = ExtResource( 10 )

[node name="UI2" type="CanvasLayer" parent="."]
visible = false
script = ExtResource( 7 )

[node name="HUD" type="Control" parent="UI2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BuildBar" type="VBoxContainer" parent="UI2/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -84.0
margin_right = 84.0
margin_bottom = -20.0
rect_min_size = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="UI2/HUD/BuildBar"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true

[node name="GameControls" type="HBoxContainer" parent="UI2/HUD"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -20.0

[node name="PausePlay" type="TextureButton" parent="UI2/HUD/GameControls"]
pause_mode = 2
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI2/HUD/GameControls"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Map2" parent="." instance=ExtResource( 1 )]

[node name="House" parent="." instance=ExtResource( 4 )]
position = Vector2( 495, 255 )

[node name="BeatKeeper" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
script = ExtResource( 8 )
Tempo = 116.0
Offset_in_MS = 500
half_beats = true
quarter_beats = true

[connection signal="pressed" from="UI2/HUD/GameControls/PausePlay" to="UI2" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI2/HUD/GameControls/SpeedUp" to="UI2" method="_on_SpeedUp_pressed"]
[connection signal="hit_key" from="Map2" to="." method="_on_Map2_hit_key"]
[connection signal="half_beat" from="BeatKeeper" to="." method="_on_BeatKeeper_half_beat"]
[connection signal="quarter_beat" from="BeatKeeper" to="." method="_on_BeatKeeper_quarter_beat"]
[connection signal="whole_beat" from="BeatKeeper" to="." method="_on_BeatKeeper_whole_beat"]
